--- a/Front/src/index.html
+++ b/Front/src/index.html
@@ -7,11 +7,12 @@
     name="viewport"
     content="width=device-width, initial-scale=1, shrink-to-fit=no"
   />
- <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css">
   <link
     href="https://fonts.googleapis.com/css?family=Muli:300,400,700,900"
     rel="stylesheet"
   />
+  <base href="/">
   <link rel="stylesheet" href="assets/asset/fonts/icomoon/style.css"/>
   <link rel="stylesheet" href="assets/asset/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="assets/asset/css/jquery-ui.css"/>
@@ -21,10 +22,10 @@
   <link rel="stylesheet" href="assets/asset/css/jquery.fancybox.min.css"/>
   <link rel="stylesheet" href="assets/asset/css/bootstrap-datepicker.css"/>
   <link rel="stylesheet" href="assets/asset/css/aos.css"/>
-    <link rel="stylesheet" href="assets/asset/css/style.css"/>
-    <link rel="stylesheet" href="assets/bundles/bootstrap-daterangepicker/daterangepicker.css">
-    <link rel="stylesheet" href="assets/bundles/bootstrap-tagsinput/dist/bootstrap-tagsinput.css">
-    <link rel="stylesheet" href="assets/css/app.min.css" />
+  <link rel="stylesheet" href="assets/asset/css/style.css"/>
+  <link rel="stylesheet" href="assets/bundles/bootstrap-daterangepicker/daterangepicker.css">
+  <link rel="stylesheet" href="assets/bundles/bootstrap-tagsinput/dist/bootstrap-tagsinput.css">
+  <link rel="stylesheet" href="assets/css/app.min.css"/>
   <link
     rel="stylesheet"
     href="assets/bundles/summernote/summernote-bs4.css"
@@ -38,10 +39,10 @@
     href="assets/bundles/bootstrap-tagsinput/dist/bootstrap-tagsinput.css"
   />
 
-  <link rel="stylesheet" href="assets/css/components.css" />
+  <link rel="stylesheet" href="assets/css/components.css"/>
   <!-- Custom style CSS -->
-  <link rel="stylesheet" href="assets/css/custom.css" />
-  <link rel="stylesheet" href="assets/css/app.min.css" />
+  <link rel="stylesheet" href="assets/css/custom.css"/>
+  <link rel="stylesheet" href="assets/css/app.min.css"/>
   <!-- Template CSS -->
   <link rel="stylesheet" href="assets/bundles/datatables/datatables.min.css">
   <link rel="stylesheet" href="assets/bundles/datatables/DataTables-1.10.16/css/dataTables.bootstrap4.min.css">
@@ -92,8 +93,6 @@
 <script src="assets/bundles/datatables/export-tables/vfs_fonts.js"></script>
 <script src="assets/bundles/datatables/export-tables/buttons.print.min.js"></script>
 <script src="assets/js/page/datatables.js"></script>
-<script src="assets/bundles/cleave-js/dist/cleave.min.js"></script>
-<script src="assets/bundles/cleave-js/dist/addons/cleave-phone.us.js"></script>
 <script src="assets/bundles/jquery-pwstrength/jquery.pwstrength.min.js"></script>
 <script src="assets/bundles/bootstrap-daterangepicker/daterangepicker.js"></script>
 <script src="assets/js/page/forms-advanced-forms.js"></script>
