--- a/Front-CoreUI/src/index.html
+++ b/Front-CoreUI/src/index.html
@@ -13,7 +13,7 @@
   <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" />
   <meta content="Easy Request | Free Request Management" name="description" />
   <meta content="Idris Donald" name="author" />
-  <link href="assets/favicon.ico" rel="icon" type="image/x-icon">
+  <link href="assets/angular.ico" rel="icon" type="image/x-icon">
   <title>Easy Request</title>
 </head>
 <body>
