--- a/Front-CoreUI/src/index.html
+++ b/Front-CoreUI/src/index.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
-<!--
-* CoreUI - Angular 17 Free Admin Template
-* @version v4.7.0
-* @link https://coreui.io/angular/
-* Copyright (c) 2017-2023 creativeLabs Łukasz Holeczek
-* License: MIT
--->
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <base href="./">
-  <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" />
-  <meta content="Easy Request | Free Request Management" name="description" />
-  <meta content="Idris Donald" name="author" />
-  <link href="assets/angular.ico" rel="icon" type="image/x-icon">
+  <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"/>
+  <meta content="Easy Request | Free Request Management" name="description"/>
+  <meta content="Idris Donald" name="author"/>
+  <link href="assets/img/angular.ico" rel="icon" type="image/x-icon">
+  <link
+    href="https://fonts.googleapis.com/css?family=Muli:300,400,700,900"
+    rel="stylesheet"
+  />
+  <base href="/">
+  <link rel="stylesheet" href="assets/asset/fonts/icomoon/style.css"/>
+  <link rel="stylesheet" href="assets/asset/css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="assets/asset/css/jquery-ui.css"/>
+  <link rel="stylesheet" href="assets/asset/css/owl.carousel.min.css"/>
+  <link rel="stylesheet" href="assets/asset/css/owl.theme.default.min.css"/>
+  <link rel="stylesheet" href="assets/asset/css/owl.theme.default.min.css"/>
+  <link rel="stylesheet" href="assets/asset/css/jquery.fancybox.min.css"/>
+  <link rel="stylesheet" href="assets/asset/css/bootstrap-datepicker.css"/>
+  <link rel="stylesheet" href="assets/asset/css/aos.css"/>
+  <link rel="stylesheet" href="assets/asset/css/style.css"/>
+  <link rel="stylesheet" href="./style.css/">
   <title>Easy Request</title>
 </head>
-<body>
+<body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <app-root>
   <div class="fade show" style="text-align: center; padding-top: calc(100vh / 2); height: 100vh">
@@ -24,5 +33,20 @@
     <span class="m-1">Loading...</span>
   </div>
 </app-root>
+<script src="assets/asset/js/jquery-3.3.1.min.js"></script>
+<script src="assets/asset/js/jquery-migrate-3.0.1.min.js"></script>
+<script src="assets/asset/js/jquery-ui.js"></script>
+<script src="assets/asset/js/popper.min.js"></script>
+<script src="assets/asset/js/bootstrap.min.js"></script>
+<script src="assets/asset/js/owl.carousel.min.js"></script>
+<script src="assets/asset/js/jquery.stellar.min.js"></script>
+<script src="assets/asset/js/jquery.countdown.min.js"></script>
+<script src="assets/asset/js/bootstrap-datepicker.min.js"></script>
+<script src="assets/asset/js/jquery.easing.1.3.js"></script>
+<script src="assets/asset/js/aos.js"></script>
+<script src="assets/asset/js/jquery.fancybox.min.js"></script>
+<script src="assets/asset/js/jquery.sticky.js"></script>
+
+<script src="assets/asset/js/main.js"></script>
 </body>
 </html>
