--- a/Front/src/index.html
+++ b/Front/src/index.html
@@ -52,6 +52,7 @@
     href="../assets/img/favicon.ico"
   />
   <title>Easy Request</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600&display=swap" rel="stylesheet">
 </head>
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 <noscript>You need to enable JavaScript to run this app.</noscript>
