--- a/Front/src/index.html
+++ b/Front/src/index.html
@@ -49,7 +49,7 @@
   <link
     rel="shortcut icon"
     type="image/x-icon"
-    href="../assets/img/favicon.ico"
+    href="./assets/img/easy-request.png"
   />
   <title>Easy Request</title>
 </head>
